---------------------------------------------------------------------------------------------------
Version: 3.0.7
Date: ?
  Changes:
    - Fixed bitumen extractors invisible in 2.0. Resolves https://github.com/pyanodon/pybugreports/issues/714
    - Fixed natural gas derrick/etc can input drilling fluid into wrong port. Resolves https://github.com/pyanodon/pybugreports/issues/718
    - Fixed floating pipe connection graphics for unpopped tae extractors.
    - Bitumen extractors can now be connected to the circuit network even before it is popped.
    - Re-organized fluid inputs for bitumen extractors.
    - Sulfur mines no longer requires gas canisters can consume fuel directly.
    - Greatly increased the fuel consumption of the sulfur mine from 500kW to 30MW.
    - Increased the number of module slots in the sulfur mine 1 -> 3.
    - Added light flicker effects to the sulfur mine.
    - Diluted the effects of green modules on the sulfur mine by a factor of 9x.
---------------------------------------------------------------------------------------------------
Version: 3.0.6
Date: 2024-11-14
  Changes:
    - Buffed the rubber -> belt recipe. Rubber -> belt ratio is flipped from 2:1 to 1:2. Allowed productivity.
---------------------------------------------------------------------------------------------------
Version: 3.0.5
Date: 2024-11-9
  Changes:
    - Fixed bitumen seep graphics.
    - Ukrainian translation (by bootseller)
---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: 2024-11-7
  Changes:
    - Made most crafting machines flippable
    - Allow PyPH to load by itself.
---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: 2024-11-5
  Changes:
    - Fixed that bitumen seeps did not respect quality.
    - Fixed that the bitumen seep hidden assembler did not perserve the direction of the parent mining drill.