@@ -120,6 +120,7 @@ drilling-fluid-0=It's just thick mud
 [entity-name]
 oil-sand=Oil sand
 tar-patch=Tar pit
+oil-explosion=Oil explosion
 oil-mk01=Small oil patch
 oil-mk02=Medium oil patch
 oil-mk03=Big oil patch
