@@ -1,3 +1,5 @@
+bitumen-seep-alert=[img=entity/__1__] [font=default-semibold][color=248, 175, 38] A bitumen seep has ruptured! Found [font=default-bold]__2__[/font] × [fluid=__3__] at [gps=__4__,__5__,__6__].[/color][/font]
+
 [pywiki-sections]
 petroleumhandling=Petroleum handling
 bitumen-seep=[item=tar-extractor-mk01] Bitumen seeps
