@@ -252,10 +252,10 @@ local pipe_connections_per_tier = {
         {flow_direction = "output", position = {-2.0, 0}, direction = defines.direction.west},
     },
     {
-        {flow_direction = "input-output", position = {0, -3.0}, direction = defines.direction.north},
-        {flow_direction = "input-output", position = {3.0, 0},  direction = defines.direction.east},
-        {flow_direction = "input-output", position = {0, 3.0},  direction = defines.direction.south},
-        {flow_direction = "input-output", position = {-3.0, 0}, direction = defines.direction.west},
+        {flow_direction = "output", position = {0, -3.0}, direction = defines.direction.north},
+        {flow_direction = "output", position = {3.0, 0},  direction = defines.direction.east},
+        {flow_direction = "output", position = {0, 3.0},  direction = defines.direction.south},
+        {flow_direction = "output", position = {-3.0, 0}, direction = defines.direction.west},
     },
     {
         {flow_direction = "output", position = {0, -4.0}, direction = defines.direction.north},
