@@ -64,10 +64,10 @@ RECIPE {
     enabled = false,
     ingredients = {
         {type = "item", name = "tar-extractor-mk01", amount = 1},
-        {type = "item", name = "advanced-circuit", amount = 5},
-        {type = "item", name = "small-parts-02",   amount = 15},
-        {type = "item", name = "engine-unit",      amount = 10},
-        {type = "item", name = "niobium-plate",    amount = 10},
+        {type = "item", name = "advanced-circuit",   amount = 5},
+        {type = "item", name = "small-parts-02",     amount = 15},
+        {type = "item", name = "engine-unit",        amount = 10},
+        {type = "item", name = "niobium-plate",      amount = 10},
     },
     results = {
         {type = "item", name = "tar-extractor-mk02", amount = 1}
@@ -301,3 +301,145 @@ for i = 1, 4 do
         localised_description = {"entity-description." .. name}
     }
 end
+
+local oil_explosion = {
+    animations = {
+        {
+            animation_speed = 0.5,
+            draw_as_glow = true,
+            filename = "__pypetroleumhandlinggraphics__/graphics/entity/oil-explosion/oil-explosion-1.png",
+            frame_count = 36,
+            height = 416,
+            shift = {
+                0,
+                -1.5
+            },
+            stripes = {
+                {
+                    filename = "__pypetroleumhandlinggraphics__/graphics/entity/oil-explosion/oil-explosion-1.png",
+                    height_in_frames = 3,
+                    width_in_frames = 6
+                },
+                {
+                    filename = "__pypetroleumhandlinggraphics__/graphics/entity/oil-explosion/oil-explosion-2.png",
+                    height_in_frames = 3,
+                    width_in_frames = 6
+                }
+            },
+            width = 324
+        }
+    },
+    created_effect = {
+        action_delivery = {
+            target_effects = {
+                {
+                    initial_height = 0.5,
+                    initial_vertical_speed = 0.08,
+                    initial_vertical_speed_deviation = 0.15,
+                    offset_deviation = {
+                        {
+                            -0.8984,
+                            -0.5
+                        },
+                        {
+                            0.8984,
+                            0.5
+                        }
+                    },
+                    particle_name = "explosion-stone-particle-medium",
+                    repeat_count = 20,
+                    speed_from_center = 0.1,
+                    speed_from_center_deviation = 0.15,
+                    type = "create-particle"
+                },
+                {
+                    initial_height = 1,
+                    initial_height_deviation = 0.5,
+                    initial_vertical_speed = 0.1,
+                    initial_vertical_speed_deviation = 0.05,
+                    offset_deviation = {
+                        {
+                            -0.8984,
+                            -0.5
+                        },
+                        {
+                            0.8984,
+                            0.5
+                        }
+                    },
+                    particle_name = "explosion-stone-particle-small",
+                    repeat_count = 25,
+                    speed_from_center = 0.05,
+                    speed_from_center_deviation = 0.05,
+                    type = "create-particle"
+                },
+                {
+                    initial_height = 1,
+                    initial_height_deviation = 0.5,
+                    initial_vertical_speed = 0.1,
+                    initial_vertical_speed_deviation = 0.05,
+                    offset_deviation = {
+                        {
+                            -0.8984,
+                            -0.5
+                        },
+                        {
+                            0.8984,
+                            0.5
+                        }
+                    },
+                    particle_name = "explosion-stone-particle-tiny",
+                    repeat_count = 50,
+                    speed_from_center = 0.05,
+                    speed_from_center_deviation = 0.05,
+                    type = "create-particle"
+                }
+            },
+            type = "instant"
+        },
+        type = "direct"
+    },
+    flags = {
+        "not-on-map",
+    },
+    hidden = true,
+    icon = "__base__/graphics/item-group/effects.png",
+    icon_size = 64,
+    name = "oil-explosion",
+    icons = {
+        {icon = "__base__/graphics/icons/explosion.png", tint = {0, 0, 0}},
+    },
+    flags = {"not-on-map"},
+    hidden = true,
+    sound = {
+        aggregation = {
+            max_count = 1,
+            remove = true
+        },
+        audible_distance_modifier = 95000,
+        game_controller_vibration_data = {
+            duration = 160,
+            low_frequency_vibration_intensity = 0.9,
+            play_for = "everything"
+        },
+        switch_vibration_data = {
+            filename = "__base__/sound/fight/large-explosion.bnvib",
+            gain = 0.6,
+            play_for = "everything"
+        },
+        variations = {
+            {
+                filename = "__base__/sound/fight/large-explosion-1.ogg",
+                volume = 0.8
+            },
+            {
+                filename = "__base__/sound/fight/large-explosion-2.ogg",
+                volume = 0.8
+            }
+        }
+    },
+    subgroup = "explosions",
+    type = "explosion"
+}
+
+data:extend{oil_explosion}
