@@ -44,7 +44,4 @@ nat_gas4.autoplace = nil
 nat_gas1.map_color = {r = 0.2, g = 0.1, b = 0.2}
 nat_gas4.category = "natural-gas"
 
-data.raw.resource["natural-gas-mk01"] = nat_gas1
-data.raw.resource["natural-gas-mk02"] = nat_gas2
-data.raw.resource["natural-gas-mk03"] = nat_gas3
-data.raw.resource["natural-gas-mk04"] = nat_gas4
+data:extend{nat_gas1, nat_gas2, nat_gas3, nat_gas4}
